# iotedge

edgelet/aziot-edged/: Cargo.toml
edgelet/aziot-edged/src/: watchdog.rs
edgelet/contrib/debian/: control
edgelet/edgelet-core/: Cargo.toml
edgelet/edgelet-docker/: Cargo.toml
edgelet/edgelet-docker/src/: runtime.rs
edgelet/edgelet-http/: Cargo.toml
edgelet/edgelet-http-mgmt/: Cargo.toml
edgelet/edgelet-http-workload/: Cargo.toml
edgelet/edgelet-image-cleanup/: Cargo.toml
edgelet/edgelet-settings/: Cargo.toml
edgelet/edgelet-test-utils/: Cargo.toml
edgelet/iotedge/: Cargo.toml
