[package]
authors = ["Azure IoT Edge Devs"]
edition = "2021"
name = "iotedge"
version = "0.1.0"
description = "The iotedge tool is used to manage the IoT Edge runtime."
homepage = "https://aka.ms/iotedge"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
atty = "0.2"
base64 = "0.21"
byte-unit = "4"
bytes = "1"
chrono = { version = "0.4.7", features = ["serde"] }
chrono-humanize = "0.2"
clap = "2.31"
config = { version = "0.13", default-features = false }
erased-serde = "0.3.12"
hex = "0.4"
hyper = "0.14"
lazy_static = "1"
libc = "0.2"
log = "0.4"
nix = "0.26"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.28"
tabwriter = "1"
termcolor = "1"
thiserror = "1"
tokio = { version = "1", features = ["parking_lot", "macros", "process"] }
toml = "0.7"
url = "2"

aziot-certd-config = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
aziot-identity-client-async = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
aziot-identity-common = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
aziot-identity-common-http = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
aziot-identityd-config = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
aziot-keyd-config = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
aziot-keys-common = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
aziot-tpmd-config = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
aziotctl-common = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
cert-renewal = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
config-common = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
docker = { path = "../docker-rs" }
edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
edgelet-settings = { path = "../edgelet-settings", features = ["settings-docker"] }
edgelet-utils = { path = "../edgelet-utils" }
http-common = { git = "https://github.com/robinmholt/iot-identity-service", branch = "release/1.4-daikin" }
support-bundle = { path = "../support-bundle" }
